# Makako

./: Cargo.toml  README.md
.github/workflows/: build-macos.yml
packaging/: Info.plist
src/: main.rs
src/network_module/: mod.rs
src/storage_module/: mod.rs
src/ui_module/: headers_editor.rs  mod.rs  response_panel.rs
